--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,8 @@ services:
       DB_PASSWORD: postgres
       DB_NAME: movie-watchlist
       SYNC: "true"
+      JWT_SECRET: movie-watchlist
+      JWT_EXPIRE_TIME: 3600
     depends_on:
       - postgres
     command:
