--- a/api/package.json
+++ b/api/package.json
@@ -29,10 +29,12 @@
     "@nestjs/typeorm": "^7.1.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/passport-google-oauth20": "^2.0.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
