--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,12 +27,23 @@ services:
     depends_on:
       - postgres
 
+  nginx:
+    depends_on:
+      - api
+      - client
+    restart: always
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./nginx
+    ports:
+      - "80:80"
+
   api:
     build:
       dockerfile: Dockerfile.dev
       context: ./api
-    ports:
-      - "5000:5000"
+    # ports:
+    #   - "5000:5000"
     volumes:
       - /app/node_modules
       - /app/dist
@@ -61,8 +72,8 @@ services:
       context: ./client
     environment:
       BASE_API_URL: api
-    ports:
-      - "3000:3000"
+    # ports:
+    #   - "3000:3000"
     volumes:
       - /app/node_modules
       - ./client:/app
