--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:alpine
+RUN apk add --no-cache bash
 WORKDIR '/app'
 COPY ./package*.json ./
-RUN npm install
+RUN npm install 
 COPY . .
-RUN npm run start:prod
+RUN npm run build
+CMD ["./wait-for-it.sh", "postgres:5432", "--", "npm", "run", "start:prod"]
