--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ language: generic
 services:
   - docker
 
-before_install:
-  - docker build -t bongster228/react-test -f ./client/Dockerfile.dev ./client
+# before_install:
+#   - docker build -t bongster228/react-test -f ./client/Dockerfile.dev ./client
 
-script:
-  - docker run bongster228/react-test npm test -- --coverage
+# script:
+#   - docker run bongster228/react-test npm test -- --coverage
 
 after_success:
   - docker build -t bongster228/movie-app-client ./client
