--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,8 +1,14 @@
-FROM node:alpine
+FROM node:alpine as development
 RUN apk add --no-cache bash
 WORKDIR '/app'
 COPY ./package*.json ./
 RUN npm install 
 COPY . .
 RUN npm run build
-CMD ["./wait-for-it.sh", "$DB_HOST:5432", "--", "npm", "run", "start:prod"]
+
+FROM node:alpine as prod
+WORKDIR '/app'
+COPY ./package*.json ./
+RUN npm install --only=production
+COPY --from=development /app/dist ./dist
+CMD ["node", "dist/main"]
