--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       SYNC: "true"
       JWT_SECRET: movie-watchlist
       JWT_EXPIRE_TIME: 3600
-      MOVIEDB_TOKEN: eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiIxNjRkZmRlNzBlMzg2MTU2NDgxZDcxYjBkYjQyNGU3ZiIsInN1YiI6IjVlOGQxZGI0Y2U5OTdhMDAxN2I4M2QzZiIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.W3kfx4m8048H02EGsJWbBZVETGuE3joQGgUJGwgtAYY
+      MOVIEDB_TOKEN: 
     depends_on:
       - postgres
 
